Update the core algorithm
+ Still some issues about infinite loops
+ An idea may be to test when the set of solutions is saturated

--- a/lib/dune
+++ b/lib/dune
@@ -1,4 +1,6 @@
 
 (library
   (name owl_core)
-  (modules core))
+  (modules core language)
+  (preprocess (pps ppx_variants_conv))
+  (libraries nacc))
