--- a/lib/dune
+++ b/lib/dune
@@ -4,5 +4,5 @@
   (name lib)
   (public_name owl.lib)
   (preprocess (pps ppx_variants_conv ppx_deriving.show))
-  (modules notations language terms unification solver loger)
+  (modules notations language terms unification solver loger streams)
   (libraries nacc))
